--- a/package.json
+++ b/package.json
@@ -21,10 +21,6 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-img": "^3.1.8",
-    "@babel/core": "^7.23.5",
-    "@babel/plugin-transform-runtime": "^7.23.4",
-    "@babel/preset-env": "^7.23.5",
-    "babel-loader": "^9.1.3",
     "clean-css": "^5.3.3",
     "clean-css-cli": "^5.6.3",
     "memfs": "^4.6.0",
@@ -33,8 +29,10 @@
     "webpack": "^5.89.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.4.1",
     "eleventy-auto-cache-buster": "^0.3.0",
     "eleventy-plugin-svg-sprite": "^2.4.2",
+    "swc-loader": "^0.2.6",
     "webpack-cli": "^5.1.4"
   }
 }
