--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swc/core": "^1.4.1",
     "eleventy-auto-cache-buster": "^0.3.0",
     "eleventy-plugin-svg-sprite": "^2.4.2",
+    "standard": "^17.1.0",
     "swc-loader": "^0.2.6",
     "webpack-cli": "^5.1.4"
   }
